--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <title>Tic Tac Toe</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <!-- Modal -->
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalTitle"></h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body" id="modalContent">
+            <div class="alert alert-danger text-center" role="alert" style="display: none;" id="error">
+            </div>
+            <div class="row">
+              <label for="playerName" class="col-sm-2 col-form-label">Name</label>
+              <div class="col-sm-10 input-group">
+                <input type="text" name="playerName" id="playerName" class="form-control">
+                <div class="input-group-append">
+                  <span class="input-group-text" id="playerNameLength"></span>
+                </div>
+              </div>
+            </div>
+            <div class="row mt-2" id="gameCodeRow">
+              <label for="gameCode" class="col-sm-2 col-form-label">Code</label>
+              <div class="col-sm-10">
+                <input disabled type="text" name="gameCode" id="gameCode" class="form-control" placeholder="12345678">
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal" id="modalCancel">Cancel</button>
+            <button type="button" class="btn btn-success" id="modalStart">Start</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container text-center pt-0 pb-2 px-2 mt-5">
+      <h1 class="display-4">Tic Tac Toe</h1>
+      <button class="btn btn-lg btn-primary" id="newGame">New Game</button>
+      <button class="btn btn-lg btn-secondary" id="joinGame">Join Game</button>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
